# open-genai

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.gpu.yml  docker-compose.yml  litellm_config.yaml
.agents/: AGENTS.md
.github/workflows/: npm-deps-audit.yml  python-deps-audit.yml
audit-app/: requirements.txt
audit-app/app/: main.py
backend/: Dockerfile  requirements.txt
backend/app/: audit.py  auth.py  image_gen.py  image_store.py  llm.py  main.py  policy.py  storage.py  teams_store.py
backend/tests/: test_security.py
docs/: container-architecture.md  future-challenges.md  hybrid-rag-guide.md  improvements-possibility-study.md  microservices-api-spec.md  model-addition-guide.md  poc-verification-report.md  sd-app-guide.md  security-fix-2026-07.md  upstream-sync-report-v0.3.2.md  whisper-app-guide.md
docs/archive/: security-fix-2026-07.md
genai-web/: .dockerignore  Dockerfile.local  package-lock.json  package.json
genai-web/docs/: security-fix-2026-07.md
keycloak/import/: realm-open-genai.json
local-sd-api/: Dockerfile  Dockerfile.gpu  requirements.txt
local-sd-api/app/: main.py
local-sd-api/tests/: test_main.py
local-whisper-api/: Dockerfile  requirements.txt
proxy/: nginx.conf
rag-app/: Dockerfile  requirements.txt
scripts/: mock-sd-server.py  run-regression-tests.sh
sd-app/: Dockerfile  requirements.txt
shared/: docextract.py  pyproject.toml  ssrfguard.py
shared/schemas/: __init__.py  rag.py
tests/: test_image_gen.py  test_intauth.py
whisper-app/: Dockerfile  requirements.txt
(+18 files in other folders)
