[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open-genai-shared"
version = "0.1.0"
description = "Open GENAI Shared Modules"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
]

[tool.setuptools.package-dir]
"shared" = "."
